--- a/views/ccpp_customer_category_view.xml
+++ b/views/ccpp_customer_category_view.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-
-    <record id="ccpp_department_action" model="ir.actions.act_window">
-        <field name="name">Department</field>
+    <record id="ccpp_customer_category_action" model="ir.actions.act_window">
+        <field name="name">Customer Category</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="res_model">ccpp.department</field>
+        <field name="res_model">ccpp.customer.category</field>
         <field name="view_mode">tree,form</field>
     </record>
 
-    <record id="ccpp_department_view_tree" model="ir.ui.view">
-        <field name="name">ccpp.department.view.tree</field>
-        <field name="model">ccpp.department</field>
+    <record id="ccpp_customer_category_view_tree" model="ir.ui.view">
+        <field name="name">ccpp.customer.category.view.tree</field>
+        <field name="model">ccpp.customer.category</field>
         <field name="arch" type="xml">
-            <tree sample="1" multi_edit="1" editable="top">
+            <tree sample="1" multi_edit="1" default_order="name">
                 <field name="name"/>
                 <field name="active"/>
             </tree>
         </field>
     </record>
 
-    <record id="ccpp_department_view_form" model="ir.ui.view">
-        <field name="name">ccpp.department.view.form</field>
-        <field name="model">ccpp.department</field>
+    <record id="ccpp_customer_category_view_form" model="ir.ui.view">
+        <field name="name">ccpp.customer.category.view.form</field>
+        <field name="model">ccpp.customer.category</field>
         <field name="arch" type="xml">
-            <form string="Patient">
+            <form string="Customer Category">
                 <sheet>
                     <group>
                         <group>
@@ -41,6 +40,6 @@
         </field>
     </record>
 
-    <!--<menuitem id="menu_ccpp_department" name="Department" parent="project.menu_project_config" action="ccpp_department_action" sequence="11"/>-->
-
+    <menuitem id="menu_ccpp_customer_category" name="Customer Category" parent="contacts.res_partner_menu_config" action="ccpp_customer_category_action" sequence="103"/>
+    
 </odoo>
