comit after user review v2.2

--- a/views/ccpp_customer_information_view.xml
+++ b/views/ccpp_customer_information_view.xml
@@ -1,22 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-    <record id="view_customer_information_search" model="ir.ui.view">
-        <field name="name">view.customer.infomation.search</field>
-        <field name="model">ccpp.customer.information</field>
-        <field name="arch" type="xml">
-            <search string="Search Customer Infomation">
-                <field name="name" string="Project"/>
-                <separator/>
-                <group expand="0" string="Group By">
-                    <filter string="Sales Person" name="sale_person_id" context="{'group_by': 'sale_person_id'}"/>
-                </group>
-            </search>
-        </field>
-    </record>
-
-    <record id="ccpp_customer_information_action2" model="ir.actions.act_window">
-        <field name="name">Customer Information2</field>
+    <record id="ccpp_customer_information_action" model="ir.actions.act_window">
+        <field name="name">Customer Information</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">ccpp.customer.information</field>
         <field name="view_mode">tree,form</field>
@@ -30,11 +16,71 @@
                 <field name="date_from"/>
                 <field name="date_to"/>
                 <field name="customer_id"/>
-                <field name="province_id"/>
-                <field name="sale_area_id"/>
+                <field name="province_id" invisible="True"/>
+                <field name="sale_area_id" invisible="True"/>
                 <field name="potential_ranking"/>
                 <field name="actual_sale_ranking"/>
-                <field name="total_sale_revenue" string="Actual Sales"/>
+                <field name="total_sale_revenue" string="Winmed Actual Sales"/>
+                <field name="competitor_ranking"/>
+                <field name="active"/>
+                <field name="sale_person_id"/>
+            </tree>
+        </field>
+    </record>
+
+    <record id="ccpp_customer_information_view_tree_order_potential" model="ir.ui.view">
+        <field name="name">ccpp.customer.information.view.tree</field>
+        <field name="model">ccpp.customer.information</field>
+        <field name="arch" type="xml">
+            <tree string="Customer Information" multi_edit="1" sample="1" default_order="potential_ranking">
+                <field name="date_from"/>
+                <field name="date_to"/>
+                <field name="customer_id"/>
+                <field name="province_id" invisible="True"/>
+                <field name="sale_area_id" invisible="True"/>
+                <field name="potential_ranking"/>
+                <field name="actual_sale_ranking"/>
+                <field name="total_sale_revenue" string="Winmed Actual Sales"/>
+                <field name="competitor_ranking"/>
+                <field name="active"/>
+                <field name="sale_person_id"/>
+            </tree>
+        </field>
+    </record>
+
+    <record id="ccpp_customer_information_view_tree_order_actual" model="ir.ui.view">
+        <field name="name">ccpp.customer.information.view.tree</field>
+        <field name="model">ccpp.customer.information</field>
+        <field name="arch" type="xml">
+            <tree string="Customer Information" multi_edit="1" sample="1" default_order="actual_sale_ranking">
+                <field name="date_from"/>
+                <field name="date_to"/>
+                <field name="customer_id"/>
+                <field name="province_id" invisible="True"/>
+                <field name="sale_area_id" invisible="True"/>
+                <field name="potential_ranking"/>
+                <field name="actual_sale_ranking"/>
+                <field name="total_sale_revenue" string="Winmed Actual Sales"/>
+                <field name="competitor_ranking"/>
+                <field name="active"/>
+                <field name="sale_person_id"/>
+            </tree>
+        </field>
+    </record>
+
+    <record id="ccpp_customer_information_view_tree_order_competitor" model="ir.ui.view">
+        <field name="name">ccpp.customer.information.view.tree</field>
+        <field name="model">ccpp.customer.information</field>
+        <field name="arch" type="xml">
+            <tree string="Customer Information" multi_edit="1" sample="1" default_order="competitor_ranking">
+                <field name="date_from"/>
+                <field name="date_to"/>
+                <field name="customer_id"/>
+                <field name="province_id" invisible="True"/>
+                <field name="sale_area_id" invisible="True"/>
+                <field name="potential_ranking"/>
+                <field name="actual_sale_ranking"/>
+                <field name="total_sale_revenue" string="Winmed Actual Sales"/>
                 <field name="competitor_ranking"/>
                 <field name="active"/>
                 <field name="sale_person_id"/>
@@ -65,21 +111,12 @@
                         </div>
                         <div>
                         </div>
-                        
                     </div>
-                    <!--<group>
-                        <group col="4">
-                            <field name="date_from"/>
-                        </group>
-                        <group col="4">
-                            <field name="date_to"/>
-                        </group>
-                    </group>-->
                     <h2 style="color:gray; font-size:1.2em;"> General Information </h2>
                     <div style="border-top: 2px solid #e6e6e6;padding: 0px;;margin-top: 10px; margin-bottom: 10px;"/>
                     <group>
                         <group>
-                            <field name="customer_id"/>
+                            <field name="customer_id" domain="[('is_customer','=',True)]"/>
                             <field name="province_id"/>
                             <field name="sale_area_id"/>
                             <field name="sale_person_id"/>
@@ -91,45 +128,35 @@
                             <field name="active" widget="boolean_toggle"/>
                         </group>
                     </group>
-                    <h2 style="color:gray; font-size:1.2em;"> Ranking </h2>
+                    <h2 style="color:gray; font-size:1.2em;"> Customer Ranking </h2>
                     <div style="border-top: 2px solid #e6e6e6;padding: 0px;margin-top: 10px; margin-bottom: 10px"/>
 
                     <div class="o_row" style="padding-top:5px">
                         <div>
-                            <label class="o_label" for="potential_ranking" string="Ranking by Potential" style="width:35%"/>
-                            <field name="potential_ranking" style="width:65%"/>
+                            <label class="o_label" for="potential_ranking" string="Ranking by Potential in Area" style="width:50%"/>
+                            <field name="potential_ranking" style="width:50%"/>
                         </div>
                         <div>  
                         </div>
                     </div>
                     <div class="o_row" style="padding-top:5px">
                         <div>
-                            <label class="o_label" for="actual_sale_ranking" string="Ranking by Actual Sale" style="width:35%"/>
-                            <field name="actual_sale_ranking" style="width:65%"/>
+                            <label class="o_label" for="actual_sale_ranking" string="Ranking by Winmed Actual Sales" style="width:50%"/>
+                            <field name="actual_sale_ranking" style="width:50%"/>
                         </div>
                         <div>
-                            <label class="o_label" for="total_sale_revenue" string="Total Sale Revenue Last Year(THB)" style="width:35%"/>
-                            <field name="total_sale_revenue" style="width:65%"/>
+                            <label class="o_label" for="total_sale_revenue" string="Total Sale Revenue Last Year(THB)" style="width:50%"/>
+                            <field name="total_sale_revenue" style="width:50%"/>
                         </div>
                     </div>
                     <div class="o_row" style="padding-top:5px">
                         <div>
-                            <label class="o_label" for="competitor_ranking" string="Ranking by Competitor" style="width:35%"/>
+                            <label class="o_label" for="competitor_ranking" string="Ranking by Competitor's Sales" style="width:35%"/>
                             <field name="competitor_ranking" style="width:65%"/>
                         </div>  
                         <div>
                         </div>
                     </div>
-                    <!--<group>
-                        <group>
-                            <field name="potential_ranking"/>
-                            <field name="actual_sale_ranking"/>
-                            <field name="competitor_ranking"/>
-                        </group>
-                        <group>
-                            <field name="total_sale_revenue"/>
-                        </group>
-                    </group>-->
 
                     <div style="border-top: 2px solid #e6e6e6;padding: 0px;margin-top: 10px; margin-bottom: 10px"/>
 
