--- a/views/ccpp_dashboard_view.xml
+++ b/views/ccpp_dashboard_view.xml
@@ -8,7 +8,7 @@
         <field name="view_mode">kanban,form,tree</field>
     </record>
 
-    <record id="ccpp_customer_information_view_tree" model="ir.ui.view">
+    <record id="ccpp_dashboard_view_tree" model="ir.ui.view">
         <field name="name">ccpp.dashboard.view.tree</field>
         <field name="model">ccpp.dashboard</field>
         <field name="arch" type="xml">
@@ -18,24 +18,8 @@
         </field>
     </record>
 
-    <record id="ccpp_customer_information_view_form" model="ir.ui.view">
+    <record id="ccpp_dashboard_view_form" model="ir.ui.view">
         <field name="name">ccpp.dashboard.view.form</field>
-        <field name="model">ccpp.dashboard</field>
-        <field name="arch" type="xml">
-            <form string="CCPP Dashboard">
-                <sheet>
-                    <group>
-                        <field name="name"/>
-                        <field name="priority_id"/>
-                        <field name="ranking_type"/>
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
-
-    <record id="ccpp_customer_information_view_kanban" model="ir.ui.view">
-        <field name="name">ccpp.dashboard.view.kanban</field>
         <field name="model">ccpp.dashboard</field>
         <field name="arch" type="xml">
             <form string="CCPP Dashboard">
@@ -65,7 +49,6 @@
                             <div t-attf-class="o_kanban_card_header">
                                 <div class="o_kanban_card_header_title">
                                     <div class="o_primary" t-if="!selection_mode">
-                                        <!--<a type="object" name="get_stock_picking_action_picking_type">-->
                                         <a>
                                             <field name="name"/>
                                         </a>
@@ -73,7 +56,6 @@
                                     <div class="o_primary" t-if="selection_mode">
                                         <field name="name"/>
                                     </div>
-                                    <!--<div class="o_secondary"><field class="o_secondary"  name="warehouse_id" readonly="1" groups="stock.group_stock_multi_warehouses"/></div>-->
                                 </div>
                                 <div class="o_kanban_manage_button_section" t-if="!selection_mode">
                                     <a class="o_kanban_manage_toggle_button" href="#"><i class="fa fa-ellipsis-v" role="img" aria-label="Manage" title="Manage"/></a>
@@ -101,6 +83,6 @@
     </record>
 
 
-    <menuitem id="menu_ccpp_customer_information" name="CCPP Dashboard V.1" parent="project.menu_project_config" action="ccpp_dashboard_action" sequence="13"/>
+    <menuitem id="menu_ccpp_dashboard" name="CCPP Dashboard V.1" parent="project.menu_project_config" action="ccpp_dashboard_action" sequence="13"/>
     
 </odoo>
