--- a/views/ccpp_purchase_history_view.xml
+++ b/views/ccpp_purchase_history_view.xml
@@ -1,31 +1,63 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
+    
+
+    <record id="ccpp_purchase_history_search" model="ir.ui.view">
+        <field name="name">Customer Purchase History Search</field>
+        <field name="model">ccpp.purchase.history</field>
+        <field name="arch" type="xml">
+            <search string="Search Puechase History">
+                <field name="year_selection"/>
+                <field name="month"/>
+                <field name="customer_id"/>
+                <field name="vendor_id"/>
+                <field name="sale_person_id"/>
+                <!--<filter string="My Projects" name="own_projects" domain="[('user_id', '=', uid)]"/>-->
+                <separator/>
+                <group expand="0" string="Group By">
+                    <filter string="Customer" name="customer" context="{'group_by': 'customer_id'}"/>
+                    <filter string="Year" name="year" context="{'group_by': 'year_selection'}"/>
+                    <filter string="Month" name="monthh" context="{'group_by': 'month'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
+
     <record id="ccpp_purchase_history_action" model="ir.actions.act_window">
         <field name="name">Customer Purchase History</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">ccpp.purchase.history</field>
+        <field name="context">{'search_default_customer': 1}</field>
         <field name="view_mode">tree,form</field>
+    </record>
+
+    <record id="ccpp_purchase_history_action_form" model="ir.actions.act_window">
+        <field name="name">Customer Purchase History</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">ccpp.purchase.history</field>
+        <field name="view_mode">form</field>
+        <field name="target">main</field>
     </record>
 
     <record id="ccpp_purchase_history_view_tree" model="ir.ui.view">
         <field name="name">ccpp.purchase.history.view.tree</field>
         <field name="model">ccpp.purchase.history</field>
         <field name="arch" type="xml">
-            <tree sample="1" multi_edit="1" editable="top">
+            <tree sample="1" multi_edit="1">
                 <field name="year_selection"/>
-                <field name="month"/>
+                <field name="month" invisible="True"/>
                 <field name="customer_id"/>
-                <field name="potential_type"/>
+                <field name="potential_type" invisible="True"/>
                 <field name="company_id" invisible="True"/>
                 <field name="company_partner_id" invisible="True"/>
-                <field name="vendor_id" domain="['|',('is_competitor','=',True),('id','=',company_partner_id)]"/>
-                <field name="domain_job_position_ids" invisible="True"/>
-                <field name="key_user_id" domain="[('id','in',domain_job_position_ids)]"/>
-                <field name="product_id"/>
-                <field name="unit_price"/>
-                <field name="order_qty" sum="sum_order_qty"/>
-                <field name="use_qty" sum="sum_use_qty"/>
+                <field name="vendor_id" domain="['|',('is_competitor','=',True),('id','=',company_partner_id)]" invisible="True"/>
+                <field name="domain_key_user_ids" invisible="True"/>
+                <field name="key_user_id" domain="[('id','in',domain_key_user_ids)]" context="{'show_title_position':True}" invisible="True"/>
+                <field name="product_id" invisible="True"/>
+                <field name="unit_price" invisible="True"/>
+                <field name="order_qty" sum="sum_order_qty" invisible="True"/>
+                <field name="use_qty" sum="sum_use_qty" invisible="True"/>
                 <field name="note"/>
                 <field name="sale_person_id"/>
             </tree>
@@ -38,25 +70,77 @@
         <field name="arch" type="xml">
             <form string="Purchase History">
                 <sheet>
+                    <div class="o_row" style="padding-top:5px; padding-bottom:10px">
+                        <div>
+                            <h2> Year
+                            <field name="year_selection"/>  
+                            </h2>
+                        </div>
+                        <div>
+                        </div>
+                        <!-- <div>
+                            <h2> Month
+                            <field name="month"/>  
+                            </h2>
+                        
+                        </div> -->
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                    </div>
+                    <h2 style="color:gray; font-size:1.2em;"> General Information </h2>
+                    <div style="border-top: 2px solid #e6e6e6;padding: 0px;;margin-top: 10px; margin-bottom: 10px;"/>
                     <group>
                         <group>
-                            <field name="year_selection"/>
-                            <field name="month"/>
                             <field name="customer_id"/>
-                            <field name="potential_type"/>
-                            <field name="vendor_id"/>
-                            <field name="domain_job_position_ids" invisible="True"/>
-                            <field name="key_user_id" domain="[('id','in',domain_job_position_ids)]"/>
-                        </group>
-                        <group>
-                            <field name="product_id"/>
-                            <field name="unit_price"/>
-                            <field name="order_qty"/>
-                            <field name="use_qty"/>
-                            <field name="note"/>
                             <field name="sale_person_id"/>
                         </group>
+                        <group>
+                        </group>
                     </group>
+                    <h2 style="color:gray; font-size:1.2em;"> Summary Information </h2>
+                    <div style="border-top: 2px solid #e6e6e6;padding: 0px;;margin-top: 10px; margin-bottom: 10px;"/>
+                     <group>
+                        <group>
+                            <field name="total_price"/>
+                            <field name="total_qty"/>
+                            <field name="total_use_qty"/>
+                        </group>
+                        <group>
+                        </group>
+                    </group>
+
+                    <notebook>
+                        <page name="winmed_lines" string="Winmed Products">
+                            <field name="winmed_lines" domain="[('potential_type','=','company')]" context="{'potential_type':'company'}">
+                                <tree editable="bottom">
+                                    <field name="product_id"/>
+                                    <field name="potential_type" invisible="True"/>
+                                    <field name="domain_key_user_ids" invisible="True"/>
+                                    <field name="key_user_id" domain="[('id','in',domain_key_user_ids)]" context="{'show_title_position':True}"/>
+                                    <field name="unit_price"/>
+                                    <field name="order_qty"/>
+                                    <field name="use_qty"/>
+                                    <field name="note"/>
+                                </tree>
+                            </field>
+                        </page>
+                        <page name="competitor_lines" string="Competitor Products">
+                            <field name="competitor_lines" domain="[('potential_type','=','competitor')]" context="{'potential_type':'competitor'}">
+                                <tree editable="bottom">
+                                    <field name="product_id"/>
+                                    <field name="vendor_id" domain="[('is_competitor','=',True)]"/>
+                                    <field name="domain_key_user_ids" invisible="True"/>
+                                    <field name="key_user_id" domain="[('id','in',domain_key_user_ids)]" context="{'show_title_position':True}"/>
+                                    <field name="unit_price" />
+                                    <field name="order_qty" />
+                                    <field name="use_qty"/>
+                                    <field name="note"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids" groups="base.group_user"/>
@@ -66,6 +150,54 @@
         </field>
     </record>
 
+    <record id="ccpp_purchase_history_search_by_product" model="ir.ui.view">
+        <field name="name">Customer Purchase History Search by Product</field>
+        <field name="model">ccpp.purchase.history.line</field>
+        <field name="arch" type="xml">
+            <search string="Search Puechase History Lines">
+                <field name="year_selection"/>
+                <field name="customer_id"/>
+                <field name="vendor_id"/>
+                <field name="sale_person_id"/>
+                <!--<filter string="My Projects" name="own_projects" domain="[('user_id', '=', uid)]"/>-->
+                <separator/>
+                <group expand="0" string="Group By">
+                    <filter string="Customer" name="customer" context="{'group_by': 'customer_id'}"/>
+                    <filter string="Year" name="year" context="{'group_by': 'year_selection'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
+
+    <record id="ccpp_purchase_history_action_by_product" model="ir.actions.act_window">
+        <field name="name">Customer Purchase History 2</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">ccpp.purchase.history.line</field>
+        <field name="domain">[('potential_type', '=', 'company')]</field>
+        <field name="context">{'search_default_customer': 1, 'search_default_year': 1, 'is_create_history':True}</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <record id="ccpp_purchase_history_view_tree_by_product" model="ir.ui.view">
+        <field name="name">ccpp.purchase.history.view.tree.by.product</field>
+        <field name="model">ccpp.purchase.history.line</field>
+        <field name="arch" type="xml">
+            <tree js_class="button_in_tree">
+                <!--<header>
+                    <button name="action_open_history_form" type="object" string="Create XXX"/>
+                </header>-->
+                <field name="product_id" readonly="True"/>
+                <field name="key_user_id" readonly="True"/>
+                <field name="unit_price" readonly="True"/>
+                <field name="order_qty" sum="sum_order_qty" readonly="True"/>
+                <field name="use_qty" sum="sum_use_qty" readonly="True"/>
+                <field name="sale_person_id" readonly="True"/>
+                <button name="action_open_history_form" type="object" string="More Information"/>
+            </tree>
+        </field>
+    </record>
+
     <menuitem id="menu_ccpp_purchase_history" name="Customer Purchase History" parent="crm.crm_menu_sales" action="ccpp_purchase_history_action" sequence="103"/>
+    <menuitem id="menu_ccpp_purchase_history_by_prodecy" name="Customer Purchase History 2" parent="crm.crm_menu_sales" action="ccpp_purchase_history_action_by_product" sequence="103"/>
     
 </odoo>
