--- a/views/ccpp_sale_target_view.xml
+++ b/views/ccpp_sale_target_view.xml
@@ -20,6 +20,7 @@
                 <field name="date_to" force_save="1"/>
                 <field name="target" sum="sum_target"/>
                 <field name="actual" sum="sum_actual"/>
+                <field name="actual_percent" widget="progressbar"/>
                 <field name="sale_person_id"/>
                 <field name="status_color" invisible="1"/>
                 <field name="status" readonly="True" widget="status_with_color_ccpp" options="{'color_field': 'status_color'}"/>
